refactor: Comment out 'jar' task

--- a/build.gradle
+++ b/build.gradle
@@ -167,6 +167,6 @@ test {
     useJUnitPlatform()
 }
 
-jar {
-    archiveBaseName.set('KuksoHyLib')
-}
+//jar {
+//    archiveBaseName.set('KuksoHyLib')
+//}
