--- a/build.gradle
+++ b/build.gradle
@@ -170,7 +170,7 @@ publishing {
         mavenJava(MavenPublication) {
             from components.java
             pom {
-                name.set("KuksoHyLib")
+                name.set(mod_name) //("KuksoHyLib")
                 description.set("Core Library for Kukso Hytale Mods")
                 url.set("https://github.com/KuksoHQ/kukso-hy-lib")
 
